--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ section { margin: 24px 0 28px; }
 </li>
 <li>
 <strong>The Unfluencer Deal | Worten</strong>
-<div><a href="https://www.lavanguardia.com/" rel="noopener">→ lavanguardia.com</a><br/><a href="https://www.contagious.com/iq/article/the-unfluencer-deal" rel="noopener">→ contagious.com</a><br/></div>
+<div><a href="https://www.lavanguardia.com/cribeo/viral/20231116/9383427/zasca-worten-respondiendo-criticas-llados-black-friday-mileurista.html" rel="noopener">→ lavanguardia.com</a><br/><a href="https://www.contagious.com/iq/article/the-unfluencer-deal" rel="noopener">→ contagious.com</a><br/></div>
 </li>
 <li>
 <strong>Business to your Ears | Jungle</strong>
@@ -105,7 +105,7 @@ section { margin: 24px 0 28px; }
 </li>
 <li>
 <strong>Pepsi Ring | Pepsi</strong>
-<div><a href="https://www.vogue.es/" rel="noopener">→ vogue.es</a><br/><a href="https://www.elperiodico.com/" rel="noopener">→ elperiodico.com</a><br/></div>
+<div><a href="https://www.vogue.es/moda/branded/pepsi-ring-anillo-innovador-estilo-funcionalidad" rel="noopener">→ vogue.es</a><br/><a href="https://www.elperiodico.com/es/gente/20241122/bad-gyal-nuevo-anillo-pepsi-abrir-latas-111911840" rel="noopener">→ elperiodico.com</a><br/></div>
 </li>
 <li>
 <strong>The Uncomfortable | Capitalism</strong>
