--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@ section { margin: 24px 0 28px; }
 </li>
 <li>
 <strong>Breaded Cars | KFC</strong>
-<div><a href="https://www.20minutos.es/" rel="noopener">→ 20minutos.es</a><br/><a href="https://www.contagious.com/" rel="noopener">→ contagious.com</a><br/></div>
+<div><a href="https://www.20minutos.es/gonzoo/noticia/4971774/0/kfc-se-aprovecha-de-la-calima-y-regala-pollo-a-los-clientes-que-dibujen-el-logo-en-su-coche-rebozado-por-el-polvo/" rel="noopener">→ 20minutos.es</a><br/><a href="https://www.contagious.com/iq/article/breaded-cars" rel="noopener">→ contagious.com</a><br/></div>
 </li>
 <li>
 <strong>Jungle Carrier | Jungle</strong>
-<div><a href="https://highxtar.com/" rel="noopener">→ highxtar.com</a><br/><a href="https://www.junglecarrier.com/" rel="noopener">→ junglecarrier.com</a><br/></div>
+<div><a href="https://highxtar.com/en/only-0-000001125-of-people-can-have-this-bag/" rel="noopener">→ highxtar.com</a><br/><a href="https://www.junglecarrier.com/" rel="noopener">→ junglecarrier.com</a><br/></div>
 </li>
 <li>
 <strong>Jungle compra Liquid | Jungle</strong>
-<div><a href="https://www.marketingdirecto.com/" rel="noopener">→ marketingdirecto.com</a><br/><a href="https://junglecompraliquidlab.com/" rel="noopener">→ junglecompraliquidlab.com</a><br/></div>
+<div><a href="https://www.marketingdirecto.com/marketing-general/agencias/jungle-adquiere-consultora-innovacion-empresarial-liquid-lab" rel="noopener">→ marketingdirecto.com</a><br/><a href="https://junglecompraliquidlab.com/" rel="noopener">→ junglecompraliquidlab.com</a><br/></div>
 </li>
 <li>
 <strong>The Real Mystery Box | Capitalism</strong>
-<div><a href="https://www.tiktok.com/" rel="noopener">→ tiktok.com</a><br/><a href="https://therealmysterybox.capitalismtheweb.com/" rel="noopener">→ therealmysterybox.capitalismtheweb.com</a><br/></div>
+<div><a href="https://www.tiktok.com/@valmaseda_/video/7503627980183211286" rel="noopener">→ tiktok.com</a><br/><a href="https://therealmysterybox.capitalismtheweb.com/" rel="noopener">→ therealmysterybox.capitalismtheweb.com</a><br/></div>
 </li>
 </ol>
 </section><section id="about">
