--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@ section { margin: 24px 0 28px; }
 .wrap { max-width: 760px; }
 .backtop { margin-top: 8px; }
 </style><meta content="Projects by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
+
+ <script>
+document.querySelectorAll('a[href^="http"]').forEach(function(link) {
+  if (!link.href.includes(window.location.hostname)) {
+    link.setAttribute('target', '_blank');
+    link.setAttribute('rel', 'noopener noreferrer');
+  }
+});
+</script>
+
 <body><div class="wrap"><a id="top"></a>
 <div>
 <header>
