--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 html, body { margin: 0; padding: 0 !important; }
 body { padding-bottom: 0 !important; }
 
-/* Por si quedase algún bottom menu fantasma en una versión cacheada */
+/* Ghost button */
 #bottomMenu { display: none !important; height: 0 !important; }
 
-/* Evita margen extra del último bloque en el flujo */
+/* No extra margin */
 .wrap > *:last-child,
 section:last-of-type { margin-bottom: 0 !important; }
 /* Minimal CSS that keeps the "no-CSS" look */
