--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h2 { font-size: 28px; font-weight: 700; margin: 32px 0 10px; }
 section { margin: 24px 0 28px; }
 .wrap { max-width: 760px; }
 .backtop { margin-top: 8px; }  
-</style><meta content="Projects by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
+</style><meta content="Ideas by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
 <body><div class="wrap"><a id="top"></a>
 <div>
 <header>
