--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 <title>Xose Rodríguez — Projects</title>
 <style>
   
+/* Kill any leftover bottom spacing in mobile Chrome */
+html, body { margin: 0; padding: 0 !important; }
+body { padding-bottom: 0 !important; }
+#bottomMenu { display: none !important; height: 0 !important; }
+
+/* Evita margen extra del último bloque en el flujo */
+.wrap > *:last-child,
+section:last-of-type { margin-bottom: 0 !important; }
 h2 { font-size: 28px; font-weight: 700; margin: 32px 0 10px; }
 section { margin: 24px 0 28px; }
 .wrap { max-width: 760px; }
 .backtop { margin-top: 8px; }  
+  
 </style><meta content="Ideas by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
 <body><div class="wrap"><a id="top"></a>
 <div>
