--- a/index.html
+++ b/index.html
@@ -20,7 +20,63 @@ h2 { font-size: 28px; font-weight: 700; margin: 32px 0 10px; }
 section { margin: 24px 0 28px; }
 .wrap { max-width: 760px; }
 .backtop { margin-top: 8px; }  
-  
+
+  /* Minimal CSS that keeps the "no-CSS" look */
+html, body { 
+  margin: 0; 
+  background: #fff; 
+  color: #000; 
+}
+.wrap { 
+  max-width: 740px; 
+  margin: 0 auto; 
+  padding: 24px 16px; 
+}
+h1, h2 { 
+  margin: 24px 0 12px; 
+  font-weight: 700; 
+}
+p, li, div { 
+  margin: 0 0 8px 0; 
+  line-height: 1.5; 
+}
+ol { 
+  padding-left: 20px; 
+}
+img { 
+  display: block; 
+  max-width: 100%; 
+  height: auto; 
+}
+a { 
+  text-decoration: underline; 
+} /* keep default underline */
+
+@media (min-width: 1200px) {
+  .wrap { 
+    max-width: 820px; 
+    padding: 32px 24px; 
+  }
+  h2 { 
+    margin-top: 28px; 
+  }
+}
+
+/* Micro-tuning for rhythm and readability */
+h2 { 
+  font-size: 24px; 
+  font-weight: 700; 
+  margin: 28px 0 10px; 
+}
+section { 
+  margin: 24px 0 28px; 
+}
+.wrap { 
+  max-width: 760px; 
+}
+.backtop { 
+  margin-top: 8px; 
+}
 </style><meta content="Ideas by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
 <body><div class="wrap"><a id="top"></a>
 <div>
