--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ section {
 .backtop { 
   margin-top: 8px; 
 }
+
+#tools a {
+  display: block;
+  margin-bottom: 8px; /* separa cada enlace */
+}
+
 </style><meta content="Ideas by Xose Rodríguez" name="description"/><link href='data:image/svg+xml,&lt;svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"&gt;&lt;rect width="64" height="64" fill="black"/&gt;&lt;/svg&gt;' rel="icon"/></head>
 <body><div class="wrap"><a id="top"></a>
 <div>
