--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   /* Minimal CSS that keeps the "no-CSS" look */
 html, body { 
   margin: 0; 
+    margin-bottom: 0;
+  padding-bottom: 0;
+}
+html, body {
+  height: auto;
+}
+section:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
   background: #fff; 
   color: #000; 
 }
