--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ html, body {
   height: auto;
 }
 
-
+body {
+  padding-bottom: 0 !important;
+}
+  
 h1, h2 { 
   margin: 24px 0 12px; 
   font-weight: 700; 
