--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ html, body {
   margin: 0; 
     margin-bottom: 0;
   padding-bottom: 0;
+  section:last-of-type { margin-bottom: 0 !important; }
+#tools a:last-child, .tools-links a:last-child { margin-bottom: 0 !important; }
 }
 html, body {
   height: auto;
