--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   /* Minimal CSS that keeps the "no-CSS" look */
 html, body { 
   margin: 0; 
-    margin-bottom: 0;
-  padding-bottom: 0;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+  height: auto !important;
+}
   section:last-of-type { margin-bottom: 0 !important; }
 #tools a:last-child, .tools-links a:last-child { margin-bottom: 0 !important; }
+  
 }
 html, body {
   height: auto;
