--- a/index.html
+++ b/index.html
@@ -9,27 +9,18 @@
 <style>
 
   /* Minimal CSS that keeps the "no-CSS" look */
-html, body {
-  margin: 0;
-  padding-bottom: 0 !important;
-  margin-bottom: 0 !important;
-  height: auto !important;
-}
+  
+/* Quita huecos inferiores en iOS (Chrome/Safari) incluso tras refrescar */
+html, body { margin: 0; padding: 0 !important; height: auto !important; }
+section:last-of-type { margin-bottom: 0 !important; padding-bottom: 0 !important; }
 
-* {
-  padding-bottom: 0 !important;
-  margin-bottom: 0 !important;
-}
-
+/* Si algún estilo viejo intenta meter safe-area, lo neutralizamos */
 @supports (padding: max(0px)) {
-  html, body {
-    padding-bottom: max(0px, env(safe-area-inset-bottom)) !important;
-  }
-}
-html, body {
-  height: auto;
+  html, body { padding-bottom: max(0px) !important; } /* = 0 forzado */
 }
 
+/* Por si el último listado tiene margen propio (Free Tools) */
+#tools a:last-child, .tools-links a:last-child { margin-bottom: 0 !important; }
 body {
   padding-bottom: 0 !important;
 }
