--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ section:last-of-type { margin-bottom: 0 !important; padding-bottom: 0 !important
 #tools a:last-child, .tools-links a:last-child { margin-bottom: 0 !important; }
 body {
   padding-bottom: 0 !important;
+  line-height: 1.5;
+
 }
-  
+
 h1, h2 { 
   margin: 24px 0 12px; 
   font-weight: 700; 
